<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="thumbnail">thumbnail</string>
    <string name="title_example">Fl1pzjderr Waspadai Tim Ini Di VCT APAC Playoffs!!</string>
    <string name="date_example">March 2, 2023</string>
    <string name="desc_example">BOOM Esports yang berhasil keluar menjadi juara 2022 VCT Stage 1 - Challengers Indonesia, kini mengungkapkan tim yang mereka waspadai melalui mulut sang kapten yaitu Fl1pzjderr. Fl1pzjderr mengatakan bahwa tim-tim yang berasal…</string>
    <string name="author_example">Higaraki Sinusuke</string>
    <string name="content_example">"https://thelazy.media/wp-content/uploads/2023/03/forspoken-696x392.jpg",
" ",
"Square Enix Co., LTD. umumkan bahwa mereka akan merilis sebuah DLC untuk game Forspoken dengan tajuk In Tanta We Trust!",
"https://thelazy.media/wp-content/uploads/2023/03/FORSPOKEN02.jpg",
"Forspoken: In Tanta We Trust akan menjadi prekuel dari game utama dan ber-setting sekitar 25 tahun yang lalu sebelum event Forspoken. Di sini Frey kembali mendengar suara-suara yang membuat dia berpindah ke masa terjadinya Purge of the Rheddig, pertempuran legendaris yang merusak Athia dan penyebab mengapa para Tanta jadi gila. Karena itu, Frey sekali lagi diharuskan menyelamatkan Athia sekali lagi.",
"https://thelazy.media/wp-content/uploads/2023/03/FORSPOKEN01.jpg",
"Nantinya Frey akan bekerja sama dengan Tanta Cinta menggunakan kemampuan magic terbaru, sehingga kalian bisa bisa mencoba kombo-kombo terbaru pula untuk mengalahkan semua musuh yang ada.",
"DLC ini akan dirilis pada tanggal 26 Mei 2023 mendatang untuk konsol PS 5 dan PC via Steam, Epic Games Store, dan Microsoft Store.",
"Selengkapnya mengenai DLC ini silakan kunjungi: Website"</string>
</resources>